Fixed reminder card spacing in index.html

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -181,11 +181,11 @@ header h2 {
             padding: 15px;
             text-align: center;
             background-color: #3498DB;
-
+            margin-bottom: 15px;
         }
 
         .reminderCardWrap {
-            margin-bottom: 30px;
+            margin-bottom: 15px;
             background-color: #ffffff;
             border: 1px solid #9B9B9B;
             padding: 17px 35px 17px 35px;
@@ -204,11 +204,13 @@ header h2 {
 
                 .reminderLine {
                     overflow: hidden;
-                    font-size: 1.5em;
+                    font-size: 2em;
+                    line-height: normal;
                 }
 
                     .reminderTime {
                         float: left;
+
                     }
 
                     .reminderDate {
